# Redshift-Fabric-Transpiler

./: .env.example  README.md  install.ps1  pyproject.toml  pytest.ini  requirements.txt  run.py
app/: __init__.py
app/api/: app.py  schemas.py
app/api/routes/: convert.py  health.py  reports.py
app/core/: models.py  pipeline.py  rules.py  settings.py
app/logging/: logger.py
app/output/: generator.py
app/parser/: splitter.py  table_parser.py  view_parser.py
app/reporter/: reporter.py
app/transformer/: lakehouse_mv_transformer.py  table_generator.py  view_transformer.py
app/validator/: validator.py
data/outputs/20260519_052500_demo/combined/: all_converted.sql
data/outputs/20260519_052500_demo/tables/: converted_tables.sql
data/reports/20260519_052500_demo/: conversion_report.md  conversion_summary.json
data/reports/20260529_045517_3c7bcf62/: conversion_report.md  conversion_summary.json
data/reports/20260529_045538_e5040cfd/: conversion_report.md  conversion_summary.json
data/reports/20260529_045558_38d2d766/: conversion_report.md  conversion_summary.json
data/reports/20260529_052955_14692951/: conversion_report.md  conversion_summary.json
data/reports/20260529_053016_31409a07/: conversion_report.md  conversion_summary.json
docker/: Dockerfile  docker-compose.yml
docs/: developer-guide.html
frontend/: index.html
tests/fixtures/input/: bi_alefdw_tables.sql  sample_views.sql
tests/integration/: test_pipeline_integration.py
tests/unit/: test_splitter.py  test_table_generator.py  test_table_parser.py  test_view_transformer.py
(+11 files in other folders)
